# stocksgpt

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chat.py  files.py  sessions.py
backend/app/core/: config.py  database.py  logging_config.py  model_utils.py  security.py
backend/app/models/: __init__.py  models.py  schemas.py
backend/app/services/: llm_service.py  rag_service.py  storage_service.py  tool_service.py  workflow_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  FileUpload.tsx  LLMResponsePane.tsx  SearchBar.tsx  Sidebar.tsx  Toggle.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
