[project]
name = "stocksGPT"
version = "0.1.0"
description = "Multi AI Search interface for financial analysis"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "base>=0.0.0",
    "boto3>=1.42.25",
    "fastapi>=0.128.0",
    "filetype>=1.2.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.7.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "yfinance>=1.0",
]
